force-app/main/default/objects/ICS_Multiple_Year_LGD__c/ICS_Multiple_Year_LGD__c.object-meta.xml
<CustomObject>
    <label>ICS Multiple Year LGD</label>
    <nameField>
        <displayFormat>LGD-{00000000}</displayFormat>
        <label>ICS Multiple Year LGD Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ICS Multiple Year LGD</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>