force-app/main/default/objects/ICS_Multiple_Year_LGD__c/fields/ICS_Application_Request__c.field-meta.xml
<CustomField>
    <fullName>ICS_Application_Request__c</fullName>
    <label>ICS Application Request</label>
    <referenceTo>ICS_Application__c</referenceTo>
    <relationshipLabel>ICS Multiple Year LGD</relationshipLabel>
    <relationshipName>ICS_Multiple_Year_LGD</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>