force-app/main/default/objects/ICS_Multiple_Year_LGD__c/fields/Vintage__c.field-meta.xml
<CustomField>
    <fullName>Vintage__c</fullName>
    <label>Vintage</label>
    <length>5</length>
    <type>Text</type>
</CustomField>